# shawl

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis-pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  tasks.py
.cargo/: config
.github/workflows/: main.yaml
docs/: cli.md
src/: cli.rs  control.rs  main.rs  process_job.rs  service.rs
tests/: integration.rs
