[package]
name = "shawl"
version = "1.5.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2018"
description = "Windows service wrapper for arbitrary commands"
repository = "https://github.com/mtkennerly/shawl"
readme = "README.md"
license = "MIT"
default-run = "shawl"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
ctrlc = "3.4.1"
dunce = "1.0.4"
flexi_logger = "0.27.3"
log = "0.4.20"
winapi = { version = "0.3.9", features = ["consoleapi", "errhandlingapi", "winbase", "wincon"] }
windows = { version = "0.57.0", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Media_Multimedia", "Win32_System_Com"] }
windows-service = "0.6.0"

[dev-dependencies]
regex = "1.10.2"
speculate = "0.1.2"

[build-dependencies]
winres = "0.1.12"
