[package]
name = "shawl"
version = "1.5.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Windows service wrapper for arbitrary commands"
repository = "https://github.com/mtkennerly/shawl"
readme = "README.md"
license = "MIT"
default-run = "shawl"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
ctrlc = "3.4.5"
dunce = "1.0.5"
flexi_logger = "0.29.3"
log = "0.4.22"
windows = { version = "0.58.0", features = ["Win32_System_Console", "Win32_System_Threading"] }
windows-service = "0.7.0"

[dev-dependencies]
regex = "1.11.0"
speculate = "0.1.2"

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = "thin"
strip = true
